--- a/src/fiskaltrust.ifPOS/fiskaltrust.ifPOS.csproj
+++ b/src/fiskaltrust.ifPOS/fiskaltrust.ifPOS.csproj
@@ -2,13 +2,10 @@
   
   <PropertyGroup>
     <PackageId>fiskaltrust.interface</PackageId>
-    <Version>0.0.0.0</Version>
-    <AssemblyVersion>0.0.0.0</AssemblyVersion>
-    <FileVersion>0.0.0.0</FileVersion>
     <Authors>fiskaltrust</Authors>
     <Company>fiskaltrust</Company>
     <PackageLicenseUrl>https://www.fiskaltrust.at/license/interface</PackageLicenseUrl>
-    <PackageProjectUrl>https://portal.fiskaltrust.at/</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/fiskaltrust/middleware-interface-dotnet</PackageProjectUrl>
     <PackageIconUrl>https://portal.fiskaltrust.at/Content/favicons/favicon-64x64.png</PackageIconUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Description>fiskaltrust.interface describes the interface that is used to communicate with the fiskaltrust.Middleware</Description>
