--- a/azure-pipelines/azure-pipelines.yml
+++ b/azure-pipelines/azure-pipelines.yml
@@ -46,17 +46,8 @@ jobs:
          **/*.dll
          **/*.exe
 
-      # dotnet test does not call all tests with each target framework when using a multi-target project. Should be fixed a second time in https://github.com/Microsoft/vstest/issues/1603
-    - script: dotnet test --no-build --configuration $(buildConfiguration)  --test-adapter-path:. --logger:nunit;LogFilePath=TestResultsNet40.xml -f net40
-      displayName: 'dotnet Test ifPOS net40'
-      workingDirectory:  'test\fiskaltrust.ifPOS.Tests'
-
-    - script: dotnet test --no-build --configuration $(buildConfiguration)  --test-adapter-path:. --logger:nunit;LogFilePath=TestResultsNet461.xml -f net461
-      displayName: 'dotnet Test ifPOS net461'
-      workingDirectory:  'test\fiskaltrust.ifPOS.Tests'
-
-    - script: dotnet test --no-build --configuration $(buildConfiguration)  --test-adapter-path:. --logger:nunit;LogFilePath=TestResultsNetCoreApp30.xml -f netcoreapp3.0
-      displayName: 'dotnet Test ifPOS netcoreapp30'
+    - script: dotnet test --no-build --configuration $(buildConfiguration)  --test-adapter-path:. --logger:nunit;LogFilePath=TestResults.xml
+      displayName: 'dotnet Test ifPOS'
       workingDirectory:  'test\fiskaltrust.ifPOS.Tests'
 
     - task: PublishTestResults@2
@@ -71,13 +62,6 @@ jobs:
     - script: dotnet pack --no-build --output $(Build.ArtifactStagingDirectory) --configuration $(buildConfiguration) --version-suffix "$(prerelease)" /p:Build=$(Build.BuildId) /p:GitCommit=$(ShortGitCommit)
       displayName: 'dotnet pack ifPOS'
 
-    - task: CopyFiles@1
-      displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
-      inputs:
-        SourceFolder: '$(build.sourcesdirectory)'
-        Contents: '**\bin\$(BuildConfiguration)\**\*'
-        TargetFolder: '$(build.artifactstagingdirectory)'
-   
     - task: PublishBuildArtifacts@1
       displayName: 'Publish Artifact: drop'
       inputs:
