--- a/src/fiskaltrust.Middleware.Interface.Grpc/fiskaltrust.Middleware.Interface.Grpc.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Grpc/fiskaltrust.Middleware.Interface.Grpc.csproj
@@ -1,7 +1,32 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="fiskaltrust.interface" Version="1.3.0-rc1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Grpc.Core" Version="2.28.1" />
+    <PackageReference Include="protobuf-net.Grpc.Native" Version="1.0.37" />
+  </ItemGroup>
+
+  <PropertyGroup>
+    <PackageId>fiskaltrust.Middleware.Interface.Grpc</PackageId>
+    <Authors>fiskaltrust</Authors>
+    <Company>fiskaltrust</Company>
+    <PackageLicenseUrl>https://github.com/fiskaltrust/middleware-interface-dotnet/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/fiskaltrust/middleware-interface-dotnet</PackageProjectUrl>
+    <PackageIconUrl>https://portal.fiskaltrust.at/Content/favicons/favicon-64x64.png</PackageIconUrl>
+    <Description>An optional helper implementation to simplify the usage of the fiskaltrust Middleware interface via gRPC.</Description>
+    <Copyright>Copyright 2020</Copyright>
+    <PackageTags>fiskaltrust interface</PackageTags>
+    <AssemblyCompany>fiskaltrust</AssemblyCompany>
+    <AssemblyProduct>fiskaltrust.Middleware.Interface.Grpc</AssemblyProduct>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\fiskaltrust.ifPOS\fiskaltrust.Middleware.Interface.csproj" />
+  </ItemGroup>
 
 </Project>
