--- a/src/fiskaltrust.Middleware.Interface.Soap/fiskaltrust.Middleware.Interface.Soap.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Soap/fiskaltrust.Middleware.Interface.Soap.csproj
@@ -1,7 +1,43 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net461</TargetFramework>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="fiskaltrust.interface" Version="1.3.0-rc1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <PropertyGroup>
+    <PackageId>fiskaltrust.Middleware.Interface.Soap</PackageId>
+    <Authors>fiskaltrust</Authors>
+    <Company>fiskaltrust</Company>
+    <PackageLicenseUrl>https://github.com/fiskaltrust/middleware-interface-dotnet/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/fiskaltrust/middleware-interface-dotnet</PackageProjectUrl>
+    <PackageIconUrl>https://portal.fiskaltrust.at/Content/favicons/favicon-64x64.png</PackageIconUrl>
+    <Description>An optional helper implementation to simplify the usage of the fiskaltrust Middleware interface via WCF/SOAP.</Description>
+    <Copyright>Copyright 2020</Copyright>
+    <PackageTags>fiskaltrust interface</PackageTags>
+    <AssemblyCompany>fiskaltrust</AssemblyCompany>
+    <AssemblyProduct>fiskaltrust.Middleware.Interface.Soap</AssemblyProduct>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\fiskaltrust.ifPOS\fiskaltrust.Middleware.Interface.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
 
 </Project>
