--- a/src/fiskaltrust.Middleware.Interface.Soap/fiskaltrust.Middleware.Interface.Soap.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Soap/fiskaltrust.Middleware.Interface.Soap.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFrameworks>net40;net461</TargetFrameworks>
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="fiskaltrust.interface" Version="1.3.0-rc1" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="6.0.8" />
   </ItemGroup>
 
   <PropertyGroup>
