Project should have the same name as package

--- a/src/fiskaltrust.Middleware.Interface.Http/fiskaltrust.Middleware.Interface.Http.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Http/fiskaltrust.Middleware.Interface.Http.csproj
@@ -24,7 +24,7 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\fiskaltrust.ifPOS\fiskaltrust.Middleware.Interface.csproj" />
+    <ProjectReference Include="..\fiskaltrust.ifPOS\fiskaltrust.interface.csproj" />
   </ItemGroup>
   
 
