Added retry logic to clients

--- a/src/fiskaltrust.Middleware.Interface.Client.Grpc/fiskaltrust.Middleware.Interface.Client.Grpc.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Grpc/fiskaltrust.Middleware.Interface.Client.Grpc.csproj
@@ -11,6 +11,23 @@
     <PackageReference Include="protobuf-net.Grpc.Native" Version="1.0.37" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\fiskaltrust.Middleware.Interface.Client.Shared\fiskaltrust.Middleware.Interface.Client.Shared.csproj">
+      <PrivateAssets>all</PrivateAssets>
+    </ProjectReference>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <_PackageFiles Include="$(OutputPath)\net461\fiskaltrust.Middleware.Interface.Client.Shared.dll">
+      <BuildAction>None</BuildAction>
+      <PackagePath>lib\net461\</PackagePath>
+    </_PackageFiles>
+    <_PackageFiles Include="$(OutputPath)\netstandard2.0\fiskaltrust.Middleware.Interface.Client.Shared.dll">
+      <BuildAction>None</BuildAction>
+      <PackagePath>lib\netstandard2.0\</PackagePath>
+    </_PackageFiles>
+  </ItemGroup>
+
   <PropertyGroup>
     <PackageId>fiskaltrust.Middleware.Interface.Grpc</PackageId>
     <Authors>fiskaltrust</Authors>
