Fixed package IDs

--- a/src/fiskaltrust.Middleware.Interface.Client.Grpc/fiskaltrust.Middleware.Interface.Client.Grpc.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Grpc/fiskaltrust.Middleware.Interface.Client.Grpc.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <PackageId>fiskaltrust.Middleware.Interface.Grpc</PackageId>
+    <PackageId>fiskaltrust.Middleware.Interface.Client.Grpc</PackageId>
     <Authors>fiskaltrust</Authors>
     <Company>fiskaltrust</Company>
     <PackageLicenseUrl>https://github.com/fiskaltrust/middleware-interface-dotnet/LICENSE</PackageLicenseUrl>
