--- a/src/fiskaltrust.Middleware.Interface.Client.Http/fiskaltrust.Middleware.Interface.Client.Http.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Http/fiskaltrust.Middleware.Interface.Client.Http.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
   
   <PropertyGroup>
-    <PackageId>fiskaltrust.Middleware.Interface.Http</PackageId>
+    <PackageId>fiskaltrust.Middleware.Interface.Client.Http</PackageId>
     <Authors>fiskaltrust</Authors>
     <Company>fiskaltrust</Company>
     <PackageLicenseUrl>https://github.com/fiskaltrust/middleware-interface-dotnet/LICENSE</PackageLicenseUrl>
