--- a/src/fiskaltrust.Middleware.Interface.Client.Shared/fiskaltrust.Middleware.Interface.Client.Shared.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Shared/fiskaltrust.Middleware.Interface.Client.Shared.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
     <LangVersion>8</LangVersion>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
