Fixed path in pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,7 @@ jobs:
 
     - script: dotnet test --no-build --configuration $(buildConfiguration)  --test-adapter-path:. --logger:nunit;LogFilePath=TestResults.xml
       displayName: 'dotnet test Clients'
-      workingDirectory:  'fiskaltrust.Middleware.Interface.Client.Tests'
+      workingDirectory:  'test\fiskaltrust.Middleware.Interface.Client.Tests'
       
     - task: PublishTestResults@2
       displayName: 'Publish Test Results'
