--- a/test/fiskaltrust.Middleware.Interface.Client.Tests/fiskaltrust.Middleware.Interface.Client.Tests.csproj
+++ b/test/fiskaltrust.Middleware.Interface.Client.Tests/fiskaltrust.Middleware.Interface.Client.Tests.csproj
@@ -12,6 +12,7 @@
     <ProjectReference Include="..\..\src\fiskaltrust.Middleware.Interface.Client.Grpc\fiskaltrust.Middleware.Interface.Client.Grpc.csproj" />
     <ProjectReference Include="..\..\src\fiskaltrust.Middleware.Interface.Client.Http\fiskaltrust.Middleware.Interface.Client.Http.csproj" />
     <ProjectReference Include="..\..\src\fiskaltrust.Middleware.Interface.Client.Soap\fiskaltrust.Middleware.Interface.Client.Soap.csproj" />
+    <ProjectReference Include="..\fiskaltrust.Middleware.Interface.Tests.Helpers\fiskaltrust.Middleware.Interface.Tests.Helpers.csproj" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'net461'">
