added missing request parameter

--- a/.gitignore
+++ b/.gitignore
@@ -311,3 +311,5 @@ ModelManifest.xml
 /receiptcases/20170401 ft-Geschäftsvorfälle.xlsm
 /receiptcases/20170401 ft-Geschäftsvorfälle.xlsm
 /receiptcases/20170401 ft-Geschäftsvorfälle.xlsm
+/TestData.json
+/JournalData.json
