--- a/src/fiskaltrust.ifPOS/fiskaltrust.interface.csproj
+++ b/src/fiskaltrust.ifPOS/fiskaltrust.interface.csproj
@@ -25,7 +25,15 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyCompany>fiskaltrust consulting gmbh</AssemblyCompany>
     <AssemblyProduct>fiskaltrust.if</AssemblyProduct>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'net40'">
     <DefineConstants>WCF</DefineConstants>
