--- a/src/fiskaltrust.Middleware.Interface.Client.Http.StrongName/fiskaltrust.Middleware.Interface.Client.Http.StrongName.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Http.StrongName/fiskaltrust.Middleware.Interface.Client.Http.StrongName.csproj
@@ -20,14 +20,20 @@
 		<Compile Include="..\fiskaltrust.Middleware.Interface.Client.Http\**\*.cs" Exclude="..\fiskaltrust.Middleware.Interface.Client.Http\obj\**\*.cs" />
 	</ItemGroup>
 
-	<PropertyGroup>
-		<TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
-	</PropertyGroup>
-	<Target DependsOnTargets="ResolveReferences" Name="CopyProjectReferencesToPackage">
-		<ItemGroup>
-			<BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))" />
-		</ItemGroup>
-	</Target>
+	<ItemGroup>
+		<_PackageFiles Include="$(OutputPath)\net461\fiskaltrust.Middleware.Interface.Client.Common.dll">
+			<BuildAction>None</BuildAction>
+			<PackagePath>lib\net461\</PackagePath>
+		</_PackageFiles>
+		<_PackageFiles Include="$(OutputPath)\netstandard2.0\fiskaltrust.Middleware.Interface.Client.Common.dll">
+			<BuildAction>None</BuildAction>
+			<PackagePath>lib\netstandard2.0\</PackagePath>
+		</_PackageFiles>
+		<_PackageFiles Include="$(OutputPath)\net6.0\fiskaltrust.Middleware.Interface.Client.Common.dll">
+			<BuildAction>None</BuildAction>
+			<PackagePath>lib\net6.0\</PackagePath>
+		</_PackageFiles>
+	</ItemGroup>
 
 	<PropertyGroup>
 		<PackageId>fiskaltrust.Middleware.Interface.Client.Http.StrongName</PackageId>
