--- a/src/fiskaltrust.Middleware.Interface.Client.Http/fiskaltrust.Middleware.Interface.Client.Http.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Http/fiskaltrust.Middleware.Interface.Client.Http.csproj
@@ -16,14 +16,20 @@
 		</ProjectReference>
 	</ItemGroup>
 
-	<PropertyGroup>
-		<TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
-	</PropertyGroup>
-	<Target DependsOnTargets="ResolveReferences" Name="CopyProjectReferencesToPackage">
-		<ItemGroup>
-			<BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))" />
-		</ItemGroup>
-	</Target>
+	<ItemGroup>
+		<_PackageFiles Include="$(OutputPath)\net461\fiskaltrust.Middleware.Interface.Client.Common.dll">
+			<BuildAction>None</BuildAction>
+			<PackagePath>lib\net461\</PackagePath>
+		</_PackageFiles>
+		<_PackageFiles Include="$(OutputPath)\netstandard2.0\fiskaltrust.Middleware.Interface.Client.Common.dll">
+			<BuildAction>None</BuildAction>
+			<PackagePath>lib\netstandard2.0\</PackagePath>
+		</_PackageFiles>
+		<_PackageFiles Include="$(OutputPath)\net6.0\fiskaltrust.Middleware.Interface.Client.Common.dll">
+			<BuildAction>None</BuildAction>
+			<PackagePath>lib\net6.0\</PackagePath>
+		</_PackageFiles>
+	</ItemGroup>
 
 	<PropertyGroup>
 		<PackageId>fiskaltrust.Middleware.Interface.Client.Http</PackageId>
