--- a/src/fiskaltrust.Middleware.Interface.Client.Common.StrongName/fiskaltrust.Middleware.Interface.Client.Common.StrongName.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Common.StrongName/fiskaltrust.Middleware.Interface.Client.Common.StrongName.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net461;netstandard2.0;net6.0</TargetFrameworks>
+    <TargetFrameworks>net6.0</TargetFrameworks>
     <LangVersion>8</LangVersion>
     <IsPackable>false</IsPackable>
     <SignAssembly>true</SignAssembly>
