--- a/src/fiskaltrust.Middleware.Interface.Client.Http.StrongName/fiskaltrust.Middleware.Interface.Client.Http.StrongName.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Http.StrongName/fiskaltrust.Middleware.Interface.Client.Http.StrongName.csproj
@@ -1,13 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net461;netstandard2.0;net6.0</TargetFrameworks>
+		<TargetFrameworks>net6.0</TargetFrameworks>
 		<LangVersion>8</LangVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="fiskaltrust.interface.StrongName" Version="1.3.1" />
-		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -21,14 +20,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<_PackageFiles Include="$(OutputPath)\net461\fiskaltrust.Middleware.Interface.Client.Common.StrongName.dll">
-			<BuildAction>None</BuildAction>
-			<PackagePath>lib\net461\</PackagePath>
-		</_PackageFiles>
-		<_PackageFiles Include="$(OutputPath)\netstandard2.0\fiskaltrust.Middleware.Interface.Client.Common.StrongName.dll">
-			<BuildAction>None</BuildAction>
-			<PackagePath>lib\netstandard2.0\</PackagePath>
-		</_PackageFiles>
 		<_PackageFiles Include="$(OutputPath)\net6.0\fiskaltrust.Middleware.Interface.Client.Common.StrongName.dll">
 			<BuildAction>None</BuildAction>
 			<PackagePath>lib\net6.0\</PackagePath>
