--- a/src/fiskaltrust.interface.StrongName/fiskaltrust.interface.StrongName.csproj
+++ b/src/fiskaltrust.interface.StrongName/fiskaltrust.interface.StrongName.csproj
@@ -21,7 +21,7 @@
     </PackageReleaseNotes>
     <Copyright>Copyright 2016</Copyright>
     <PackageTags>fiskaltrust interface</PackageTags>
-    <TargetFrameworks>net40;net461;netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net461;netstandard2.0;netstandard2.1</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyCompany>fiskaltrust consulting gmbh</AssemblyCompany>
     <AssemblyProduct>fiskaltrust.if</AssemblyProduct>
