--- a/test/fiskaltrust.Middleware.Interface.Tests.Helpers/fiskaltrust.Middleware.Interface.Tests.Helpers.csproj
+++ b/test/fiskaltrust.Middleware.Interface.Tests.Helpers/fiskaltrust.Middleware.Interface.Tests.Helpers.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net40;net461;netcoreapp3.0</TargetFrameworks>
+    <TargetFrameworks>net461;netcoreapp3.0</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
