--- a/src/fiskaltrust.Middleware.Interface.Client.Soap/fiskaltrust.Middleware.Interface.Client.Soap.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Soap/fiskaltrust.Middleware.Interface.Client.Soap.csproj
@@ -21,14 +21,18 @@
     </ProjectReference>
   </ItemGroup>
   
-  <ItemGroup>
-    <_PackageFiles Include="$(OutputPath)\fiskaltrust.Middleware.Interface.Client.Common.dll">
-      <BuildAction>None</BuildAction>
-      <PackagePath>lib\net461\</PackagePath>
-    </_PackageFiles>
-  </ItemGroup>
+	<ItemGroup>
+		<_PackageFiles Include="$(OutputPath)\net461\fiskaltrust.Middleware.Interface.Client.Common.dll">
+			<BuildAction>None</BuildAction>
+			<PackagePath>lib\net461\</PackagePath>
+		</_PackageFiles>
+		<_PackageFiles Include="$(OutputPath)\net6\fiskaltrust.Middleware.Interface.Client.Common.dll">
+			<BuildAction>None</BuildAction>
+			<PackagePath>lib\net6\</PackagePath>
+		</_PackageFiles>
+	</ItemGroup>
 
-  <PropertyGroup>
+	<PropertyGroup>
     <PackageId>fiskaltrust.Middleware.Interface.Client.Soap</PackageId>
     <Authors>fiskaltrust</Authors>
     <Company>fiskaltrust</Company>
