--- a/src/fiskaltrust.Middleware.Interface.Client.Grpc/fiskaltrust.Middleware.Interface.Client.Grpc.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Grpc/fiskaltrust.Middleware.Interface.Client.Grpc.csproj
@@ -2,10 +2,11 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>net461;netstandard2.0;net6</TargetFrameworks>
+		<Version>2.0.0-alpha6</Version>
 	</PropertyGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' != 'net6' ">
-		<PackageReference Include="fiskaltrust.interface" Version="1.3.45-rc2" />
+		<PackageReference Include="fiskaltrust.interface" Version="2.0.0-alpha6" />
 		<PackageReference Include="Grpc.Core" Version="2.28.1" />
 		<PackageReference Include="protobuf-net.Grpc.Native" Version="1.0.37" />
 	</ItemGroup>
