--- a/src/fiskaltrust.Middleware.Interface.Client.Soap/fiskaltrust.Middleware.Interface.Client.Soap.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Soap/fiskaltrust.Middleware.Interface.Client.Soap.csproj
@@ -3,10 +3,11 @@
   <PropertyGroup>
     <TargetFrameworks>net461;net6</TargetFrameworks>
     <LangVersion>8.0</LangVersion>
+	  <Version>2.0.0-alpha6</Version>
   </PropertyGroup>
 
   <ItemGroup>
-	  <PackageReference Include="fiskaltrust.interface" Version="1.3.45-rc2" />
+	  <PackageReference Include="fiskaltrust.interface" Version="2.0.0-alpha6" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net6' ">
