Using ProjectReference instead of PackageReference for interface

--- a/test/fiskaltrust.Middleware.Interface.Client.Tests/fiskaltrust.Middleware.Interface.Client.Tests.csproj
+++ b/test/fiskaltrust.Middleware.Interface.Client.Tests/fiskaltrust.Middleware.Interface.Client.Tests.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net461'">
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Web" />
   </ItemGroup>
   
 </Project>
