--- a/src/fiskaltrust.Middleware.Interface.Client.Http.StrongName/fiskaltrust.Middleware.Interface.Client.Http.StrongName.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Http.StrongName/fiskaltrust.Middleware.Interface.Client.Http.StrongName.csproj
@@ -6,11 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="fiskaltrust.interface.StrongName" Version="1.3.47-rc2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\fiskaltrust.ifPOS\fiskaltrust.interface.csproj" />
     <ProjectReference Include="..\fiskaltrust.Middleware.Interface.Client.Common.StrongName\fiskaltrust.Middleware.Interface.Client.Common.StrongName.csproj">
       <PrivateAssets>all</PrivateAssets>
     </ProjectReference>
